--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier \"{*.{js,json},app/**/*}\" -w --ignore-path .gitignore"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/vercel": "^1.6.3",
@@ -24,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
+    "usehooks-ts": "^2.6.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.6.4"
   },
